platform/hello/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
  labels: {app: hello}
spec:
  type: ClusterIP
  selector: {app: hello}
  ports:
    - {name: http, port: 80, targetPort: 8000}
